# rynh-aleh-test-project

./: .gitignore  README.md  checkup.sh  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: crud.py  database.py  exceptions.py  main.py  middleware.py  models.py  schemas.py
backend/app/api/routers/: submissions.py
backend/app/core/: config.py
backend/app/services/: crud.py
backend/app/tests/: conftest.py  create_test_db.sql  test_crud.py  test_exceptions.py  test_integration.py  test_middleware.py  test_sessions.py  test_submissions.py
backend/migrations/: env.py
backend/migrations/versions/: 20251126_204530_35a6e3f61b49_initial.py
frontend/: Dockerfile
frontend/src/: App.js  Page1.js  Page2.js  Page3.js  styles.css
