[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of my test project"
authors = ["Rynh Aleh <rynh.aleh@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.23"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.7"
pydantic = ">=2.9.0"
alembic = "1.13.3"
pydantic-settings = "^2.12.0"


[tool.poetry.group.dev.dependencies]
ruff = "0.6.9"
mypy = "1.11.2"
black = "^25.11.0"
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
