[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of my test project"
authors = ["Rynh Aleh <rynh.aleh@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.7"
pydantic = "^2.9.0"
pydantic-settings = "^2.12.0"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.9"
mypy = "1.11.2"
black = "^25.11.0"
isort = "5.12.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
asgi-lifespan = "^1.0.1"
